// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`types generation > generates empty type when no icons 1`] = `
"// Generated by vite-plugin-svg-spritemap
/**
 * Prefix: 'sprite-'
 */

export type Icons = never;
export type IconsPrefix = 'sprite-';
export type IconsPrefixed = never;
"
`;

exports[`types generation > generates types with .ts extension 1`] = `
"// Generated by vite-plugin-svg-spritemap
/**
 * Prefix: 'sprite-'
 */

export type Icons = 'no_viewbox' | 'no_width_height' | 'spiriit' | 'vite';
export type IconsPrefix = 'sprite-';
export type IconsPrefixed = \`\${IconsPrefix}\${Icons}\`;
"
`;

exports[`types generation > generates types with custom idify 1`] = `
"// Generated by vite-plugin-svg-spritemap
/**
 * Prefix: 'sprite-'
 */

export type Icons = 'custom-no_viewbox' | 'custom-no_width_height' | 'custom-spiriit' | 'custom-vite';
export type IconsPrefix = 'sprite-';
export type IconsPrefixed = \`\${IconsPrefix}\${Icons}\`;
"
`;

exports[`types generation > generates types with different prefix 1`] = `
"// Generated by vite-plugin-svg-spritemap
/**
 * Prefix: 'icon-'
 */

export type Icons = 'no_viewbox' | 'no_width_height' | 'spiriit' | 'vite';
export type IconsPrefix = 'icon-';
export type IconsPrefixed = \`\${IconsPrefix}\${Icons}\`;
"
`;

exports[`types generation > generates types with no prefix 1`] = `
"// Generated by vite-plugin-svg-spritemap
/**
 * Prefix: none
 */

export type Icons = 'no_viewbox' | 'no_width_height' | 'spiriit' | 'vite';
export type IconsPrefix = '';
export type IconsPrefixed = \`\${IconsPrefix}\${Icons}\`;
"
`;

exports[`types generation > generates types with string filename 1`] = `
"// Generated by vite-plugin-svg-spritemap
/**
 * Prefix: 'sprite-'
 */

export type Icons = 'no_viewbox' | 'no_width_height' | 'spiriit' | 'vite';
export type IconsPrefix = 'sprite-';
export type IconsPrefixed = \`\${IconsPrefix}\${Icons}\`;
"
`;
